--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
                         </li>
                     </ul>
                     <div class="d-flex ms-lg-3">
-                        <a href="#" class="btn btn-outline-primary me-2">Post Job</a>
-                        <a href="#" class="btn btn-primary">Sign-in</a>
+                        <a href="{% url 'register' %}" class="btn btn-outline-primary me-2">Post Job</a>
+                        <a href="{% url 'register' %}" class="btn btn-primary">Sign-in</a>
                     </div>
                 </div>
             </div>
