--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,4 +1,88 @@
 {% extends 'base.html' %}
 {% block main %}
-<h1>Home page</h1>
-{% endblock %}  
+<section id="hero" class="py-5 bg-light text-center">
+    <div class="container">
+        <h1 class="display-4 fw-bold">Looking For Job?</h1>
+        <p class="lead mt-3">Find Your Dream Job With JobQueue</p>
+        <form class="row g-2 justify-content-center mt-4">
+            <div class="col-md-4 col-sm-6">
+                <input type="text" class="form-control" placeholder="Job Titlte or keyword">
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <input type="text" class="form-control" placeholder="Location">
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-danger px-4">Search</button>
+            </div>
+        </form>
+    </div>
+</section>
+<section id="hire-hero" class="py-5 bg-light text-center">
+    <div class="container">
+        <div class="card 100-h shadow-sm">
+            <div class="card-body d-flex flex-column">
+                <h1 class="card-title display-6 fw-bold">Looking to Hire?</h1>
+                <p class="small lead mt-3 mb-3 text-secondary">JobQueue is Right Platform to Find and Hire</p>
+                <div class="col-auto">
+                <button type="submit" class="btn btn-danger px-4">Post Job -></button>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="job-listings" class="py-5">
+    <div class="container">
+        <div class="d-flex justify-content-between align-content-center mb-4">
+            <h2 class="mb-0">Featured Jobs</h2>
+            <a href="#" class="small">View all Jobs</a>
+        </div>
+
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Software Engineer</h5>
+                        <p class="text-muted mb-1">Web Engineer</p>
+                        <p class="small text-secondary">Mumbai,India - Full Time</p>
+                        <div class="mt-auto">
+                            <a href="#" class="btn btn-outline-danger btn-sm">View</a>
+                            <a href="#" class="btn btn-danger btn-sm ms-2">Apply</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Software Engineer</h5>
+                        <p class="text-muted mb-1">Web Engineer</p>
+                        <p class="small text-secondary">Mumbai,India - Full Time</p>
+                        <div class="mt-auto">
+                            <a href="#" class="btn btn-outline-danger btn-sm">View</a>
+                            <a href="#" class="btn btn-danger btn-sm ms-2">Apply</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Software Engineer</h5>
+                        <p class="text-muted mb-1">Web Engineer</p>
+                        <p class="small text-secondary">Mumbai,India - Full Time</p>
+                        <div class="mt-auto">
+                            <a href="#" class="btn btn-outline-danger btn-sm">View</a>
+                            <a href="#" class="btn btn-danger btn-sm ms-2">Apply</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+
+</section>
+<section>
+
+</section>
+{% endblock %}
