--- a/templates/base.html
+++ b/templates/base.html
@@ -25,107 +25,51 @@
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#" aria-current="page">Home</a>
+                            <a class="nav-link active" href="{% url 'home' %}" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Jobs</a>
+                            <a class="nav-link fw-bold" href="#">Jobs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Why JobQueue</a>
+                            <a class="nav-link fw-bold" href="#">Why JobQueue?</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">How it works</a>
+                            <a class="nav-link fw-bold" href="#">How it works</a>
                         </li>
                     </ul>
                     <div class="d-flex ms-lg-3">
-                        <a href="{% url 'register' %}" class="btn btn-outline-primary me-2">Post Job</a>
-                        <a href="{% url 'register' %}" class="btn btn-primary">Sign-in</a>
+                        {% if not request.user.is_authenticated %}
+                        &nbsp;
+                        <a class="btn btn-primary" href="/accounts/login/">Login</a>
+                        &nbsp;
+                        &nbsp;
+                        <a class="btn btn-outline-primary" href="/accounts/register/">Register</a>
+                        &nbsp;
+                        {% else %}
+                        Hello,
+                        {{ request.user.username }}
+                        &nbsp;
+                        <a class="btn btn-outline-primary" href="/accounts/logout/">Logout</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
         </nav>
+        <div>       
+                {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                &nbsp;
+                &nbsp;
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+                {% endif %}
+            </div>
     </header>
     <main>
-        <section id="hero" class="py-5 bg-light text-center">
-            <div class="container">
-                <h1 class="display-4 fw-bold">Looking For Job?</h1>
-                <p class="lead mt-3">Find Your Dream Job With JobQueue</p>
-                <form class="row g-2 justify-content-center mt-4">
-                    <div class="col-md-4 col-sm-6">
-                        <input type="text" class="form-control" placeholder="Job Titlte or keyword">
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <input type="text" class="form-control" placeholder="Location">
-                    </div>
-                    <div class="col-auto">
-                        <button type="submit" class="btn btn-danger px-4">Search</button>
-                    </div>
-                </form>
-            </div>
-        </section>
-        <section id="hire-hero" class="py-5 bg-light text-center">
-            <div class="container">
-                <h1 class="display-5 fw-bold">Looking to Hire?</h1>
-                <p class="lead mt-3">JobQueue is Right Platform to Find and Hire</p>
-                <button type="button" class="btn btn-danger">Post Job</button>
-            </div>
-        </section>
-        <section id="job-listings" class="py-5">
-            <div class="container">
-                <div class="d-flex justify-content-between align-content-center mb-4">
-                    <h2 class="mb-0">Featured Jobs</h2>
-                    <a href="#" class="small">View all Jobs</a>
-                </div>
-
-                <div class="row g-4">
-                    <div class="col-md-4">
-                        <div class="card h-100 shadow-sm">
-                            <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Software Engineer</h5>
-                                <p class="text-muted mb-1">Web Engineer</p>
-                                <p class="small text-secondary">Mumbai,India - Full Time</p>
-                                <div class="mt-auto">
-                                    <a href="#" class="btn btn-outline-danger btn-sm">View</a>
-                                    <a href="#" class="btn btn-danger btn-sm ms-2">Apply</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card h-100 shadow-sm">
-                            <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Software Engineer</h5>
-                                <p class="text-muted mb-1">Web Engineer</p>
-                                <p class="small text-secondary">Mumbai,India - Full Time</p>
-                                <div class="mt-auto">
-                                    <a href="#" class="btn btn-outline-danger btn-sm">View</a>
-                                    <a href="#" class="btn btn-danger btn-sm ms-2">Apply</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card h-100 shadow-sm">
-                            <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Software Engineer</h5>
-                                <p class="text-muted mb-1">Web Engineer</p>
-                                <p class="small text-secondary">Mumbai,India - Full Time</p>
-                                <div class="mt-auto">
-                                    <a href="#" class="btn btn-outline-danger btn-sm">View</a>
-                                    <a href="#" class="btn btn-danger btn-sm ms-2">Apply</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section>
-
-        </section>
-        <section>
-
-        </section>
+        {% block main %}
+        {% endblock main %}
     </main>
     <footer class="bg-dark text-light">
         <!-- place footer here -->
