--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block main %}
-<section id="hero" class="py-5 bg-light text-center">
+<section id="hero" class="py-5 text-center">
     <div class="container">
         <h1 class="display-4 fw-bold">Looking For Job?</h1>
         <p class="lead mt-3">Find Your Dream Job With JobQueue</p>
@@ -17,7 +17,7 @@
         </form>
     </div>
 </section>
-<section id="hire-hero" class="py-5 bg-light text-center">
+<section id="hire-hero" class="py-5 text-center">
     <div class="container">
         <div class="card 100-h shadow-sm">
             <div class="card-body d-flex flex-column">
