--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
 
 </head>
 
-<body>
-    <header class="nav-color">
+<body class="bg-secondary-subtle">
+    <header>
         <!-- place navbar here -->
         {% include 'navbar.html' %}
         <div>
