--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,6 @@
-.nav-color{
-    background-color: #787A84 !important;
+.logo {
+    height: 10vh;
+    width: 10vw;
+    border-radius: 20%;
+    margin-right: 1vw;
 }
