--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -19,7 +19,7 @@
 </section>
 <section id="hire-hero" class="py-5 text-center">
     <div class="container">
-        <div class="card 100-h shadow-sm">
+        <div class="card 100-h shadow-sm border border-dark-subtle">
             <div class="card-body d-flex flex-column">
                 <h1 class="card-title display-6 fw-bold">Looking to Hire?</h1>
                 <p class="small lead mt-3 mb-3 text-secondary">JobQueue is Right Platform to Find and Hire</p>
