--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -93,7 +93,7 @@
     </div>
     <div class="container">
         <h2>Create Your Account</h2>
-        <form action="" method="POST">
+        <form action="" method="POST" class="form-control">
             {% csrf_token %}
             {% for field in form %}
             <div class="fieldWrapper">
@@ -108,9 +108,10 @@
             {% endfor %}
             <button type="submit">Register</button>
         </form>
-        <div class="login-link">
-            Already have an account? <a href="{% url 'login' %}">Login</a>
-        </div>
+    </div>
+    <div class="login-link">
+        Already have an account? <a href="{% url 'login' %}">Login</a>
+    </div>
     </div>
     <script>
         window.addEventListener('load', () => {
