--- a/main/templates/main/jobs.html
+++ b/main/templates/main/jobs.html
@@ -1,17 +1,8 @@
 {% extends 'base.html' %}
 {% block maim %}
 <main>
-    <section>
-        <div id="jobs" class="py-5">
-            <div class="container">
-                <div class="card text-start">
-                    <div class="card-body">
-                        <h4 class="card-title">Jobs:</h4>
-                        <p class="card-text">Body</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <section id="job-post" class="py-5">
+
     </section>
 </main>
 {% endblock %}
