--- a/inventory/templates/inventory/posts.html
+++ b/inventory/templates/inventory/posts.html
@@ -55,7 +55,7 @@
             </div>
             <div class="card shadow-sm border-0 rounded-3 p-4 mt-3">
                 <h4 class="fw-bold mb-3">Want to include a company logo? (optional)</h4>
-                <input type="file" class="form-control" name="" aria-describedby="fileHelpId"/>
+                <input type="file" class="form-control" name="" aria-describedby="fileHelpId" />
             </div>
             <div class="card shadow-sm border-0 rounded-3 p-4 mt-3">
                 <h4 class="fw-bold mb-3">How would you like to receive applications?</h4>
@@ -64,7 +64,7 @@
                     <label class="form-check-label" for="email">Receive applications by email</label>
                     <p class="small text-muted">Users will apply on Joblist.com and we will email you their resume.</p>
                 </div>
-                
+
                 <div class="form-check mt-3">
                     <input class="form-check-input" type="radio" name="only" id="url" required>
                     <label class="form-check-label" for="url">Send applicants to a URL</label>
@@ -82,22 +82,27 @@
                     <input type="url" class="form-control p-3" placeholder="Enter Application URL" required>
                 </div>
             </div>
-            <div class="m">
-                <a href="#" class="btn btn-dark d-block p-3"><h4>Next</h4></a>
+            <div class="card shadow-sm border-0 rounded-3 p-4 mt-3">
+                <h1 class="fw-bold mt-lg-1">Add a Description</h1>
+            </div>
+            <div class="m-3">
+                <a href="#" class="btn btn-dark d-block p-3">
+                    <h4>Next</h4>
+                </a>
             </div>
         </form>
     </div>
 </section>
 <script>
     const emailRadio = document.getElementById("email")
-    const emailInput =  document.getElementById("email-input")
-    emailRadio.addEventListener("change",function() {
+    const emailInput = document.getElementById("email-input")
+    emailRadio.addEventListener("change", function () {
         emailInput.classList.remove("d-none")
         urlInput.classList.add("d-none");
     })
     const urlRadio = document.getElementById("url")
-    const urlInput =  document.getElementById("url-input")
-    urlRadio.addEventListener("change",function() {
+    const urlInput = document.getElementById("url-input")
+    urlRadio.addEventListener("change", function () {
         urlInput.classList.remove("d-none")
         emailInput.classList.add("d-none");
     })
