--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,10 +16,16 @@
                 <li class="nav-item">
                     <a class="nav-link fw-bold" href="{% url 'posts' %}">Post's</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link fw-bold" href="{% url 'profile_details' %}">Profile</a>
+                </li>
                 {% endif %}
                 {% if request.user.is_authenticated and request.user.user_type == 'J' %}
                 <li class="nav-item">
                     <a class="nav-link fw-bold" href="{% url 'jobs' %}">Job's</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fw-bold" href="{% url 'profile_details' %}">Profile</a>
                 </li>
                 {% endif %}
                 <li class="nav-item">
