--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -5,6 +5,7 @@
 <p>username: {{ profile.user.username }}</p>
 <p>Education: {{ profile.educations }}</p>
 <p>Skills: {{ profile.skills }}</p>
+<p>Experience: {{ profile.experience }}</p>
 
 {% elif user.user_type == 'E' %}
 <h3>Employer Profile</h3>
