--- a/inventory/templates/inventory/posts.html
+++ b/inventory/templates/inventory/posts.html
@@ -18,6 +18,9 @@
                 <input type="text" class="form-control mb-3" placeholder="Company Name" name="company_name" required>
                 <div class="text-danger small">{{ form.company_name.errors }}</div>
 
+                <input type="text" class="form-control mb-3" placeholder="Company Name" name="company_name" required>
+                <div class="text-danger small">{{ form.company_name.errors }}</div>
+                
                 <h4 class="fw-bold mb-3">Where is the job located?</h4>
                 <div class="input-group mb-3">
                     <select class="form-select">
